--- a/src/main/resources/view/ClubsPopup.fxml
+++ b/src/main/resources/view/ClubsPopup.fxml
@@ -54,7 +54,7 @@
             <String fx:value="btn-primary" />
          </styleClass>
       </Button>
-      <Label contentDisplay="CENTER" layoutX="33.0" prefHeight="66.0" prefWidth="195.0" text="Создание клуба" textFill="#305ec1">
+      <Label contentDisplay="CENTER" layoutX="30.0" layoutY="19.0" styleClass="popup-header" stylesheets="@css/AppLabel.css" text="Создание клуба" textFill="#305ec1">
          <font>
             <Font name="System Bold" size="23.0" />
          </font>
