--- a/src/main/resources/view/CompetitionPage.fxml
+++ b/src/main/resources/view/CompetitionPage.fxml
@@ -35,76 +35,72 @@
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
-                  <Pane prefHeight="200.0" prefWidth="502.0" GridPane.columnIndex="1">
+                  <TableView fx:id="distanceTable" prefHeight="274.0" style="-fx-border-radius: 12; -fx-background-color: #FAFAFA; -fx-effect: dropshadow(three-pass-box, rgba(0, 0, 0, 0.25), 6, 0, 0, 2);" stylesheets="@css/table.css" GridPane.columnIndex="1">
+                     <columns>
+                        <TableColumn fx:id="dNameColumn" prefWidth="176.0" resizable="false" text="Название дистанции" />
+                        <TableColumn fx:id="dLengthColumn" prefWidth="176.0" resizable="false" text="Длина, метров" />
+                        <TableColumn fx:id="dHeightColumn" maxWidth="3000.0" minWidth="-Infinity" prefWidth="176.0" resizable="false" text="Набор высоты" />
+                     </columns>
+                     <columnResizePolicy>
+                        <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                     </columnResizePolicy>
+                  </TableView>
+                  <GridPane alignment="BOTTOM_LEFT" maxWidth="-Infinity" minWidth="-Infinity" prefHeight="189.0" prefWidth="220.0" GridPane.columnIndex="1">
+                     <columnConstraints>
+                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="-Infinity" minWidth="-Infinity" prefWidth="34.0" />
+                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="-Infinity" minWidth="-Infinity" prefWidth="34.0" />
+                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="-Infinity" minWidth="-Infinity" prefWidth="34.0" />
+                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="224.40003967285156" minWidth="10.0" prefWidth="113.60001220703126" />
+                     </columnConstraints>
+                     <rowConstraints>
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                     </rowConstraints>
                      <children>
-                        <TableView fx:id="distanceTable" prefHeight="274.0" style="-fx-border-radius: 12; -fx-background-color: #FAFAFA; -fx-effect: dropshadow(three-pass-box, rgba(0, 0, 0, 0.25), 6, 0, 0, 2);" stylesheets="@css/table.css">
-                           <columns>
-                              <TableColumn fx:id="dNameColumn" prefWidth="176.0" resizable="false" text="Название дистанции" />
-                              <TableColumn fx:id="dLengthColumn" prefWidth="176.0" resizable="false" text="Длина, метров" />
-                              <TableColumn fx:id="dHeightColumn" maxWidth="3000.0" minWidth="-Infinity" prefWidth="176.0" resizable="false" text="Набор высоты" />
-                           </columns>
-                           <columnResizePolicy>
-                              <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
-                           </columnResizePolicy>
-                        </TableView>
-                        <GridPane layoutX="10.0" layoutY="230.0" maxWidth="-Infinity" minWidth="-Infinity" prefHeight="50.0" prefWidth="220.0">
-                           <columnConstraints>
-                              <ColumnConstraints hgrow="SOMETIMES" maxWidth="-Infinity" minWidth="-Infinity" prefWidth="34.0" />
-                              <ColumnConstraints hgrow="SOMETIMES" maxWidth="-Infinity" minWidth="-Infinity" prefWidth="34.0" />
-                              <ColumnConstraints hgrow="SOMETIMES" maxWidth="-Infinity" minWidth="-Infinity" prefWidth="34.0" />
-                              <ColumnConstraints hgrow="SOMETIMES" maxWidth="224.40003967285156" minWidth="10.0" prefWidth="113.60001220703126" />
-                           </columnConstraints>
-                           <rowConstraints>
-                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                           </rowConstraints>
-                           <children>
-                              <Button fx:id="distanceButton" contentDisplay="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" mnemonicParsing="false" onAction="#edit" stylesheets="@css/Buttons.css" textAlignment="CENTER" textFill="WHITE" GridPane.columnIndex="1">
-                                 <graphic>
-                                    <ImageView fitHeight="12.0" fitWidth="12.0" pickOnBounds="true" preserveRatio="true">
-                                       <image>
-                                          <Image url="@images/icons/edit.png" />
-                                       </image>
-                                    </ImageView>
-                                 </graphic>
-                                 <styleClass>
-                                    <String fx:value="btn-image" />
-                                    <String fx:value="btn-warning" />
-                                 </styleClass>
-                              </Button>
-                              <Button fx:id="distanceButton" contentDisplay="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" mnemonicParsing="false" onAction="#create" stylesheets="@css/Buttons.css" textAlignment="CENTER" textFill="WHITE">
-                                 <graphic>
-                                    <ImageView fitHeight="12.0" fitWidth="12.0" pickOnBounds="true" preserveRatio="true">
-                                       <image>
-                                          <Image url="@images/icons/plus.png" />
-                                       </image>
-                                    </ImageView>
-                                 </graphic>
-                                 <styleClass>
-                                    <String fx:value="btn-image" />
-                                    <String fx:value="btn-primary" />
-                                 </styleClass>
-                              </Button>
-                              <Button fx:id="distanceButton" contentDisplay="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" mnemonicParsing="false" onAction="#delete" stylesheets="@css/Buttons.css" textAlignment="CENTER" textFill="WHITE" GridPane.columnIndex="2">
-                                 <graphic>
-                                    <ImageView fitHeight="12.0" fitWidth="12.0" pickOnBounds="true" preserveRatio="true">
-                                       <image>
-                                          <Image url="@images/icons/minus.png" />
-                                       </image>
-                                    </ImageView>
-                                 </graphic>
-                                 <styleClass>
-                                    <String fx:value="btn-danger" />
-                                    <String fx:value="btn-image" />
-                                 </styleClass>
-                              </Button>
-                              <TextField fx:id="searchDistanceTextField" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="26.0" prefWidth="108.0" promptText="поиск" stylesheets="@css/TextField.css" GridPane.columnIndex="3" GridPane.halignment="CENTER" />
-                           </children>
-                        </GridPane>
+                        <Button fx:id="distanceButton" contentDisplay="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" mnemonicParsing="false" onAction="#edit" stylesheets="@css/Buttons.css" textAlignment="CENTER" textFill="WHITE" GridPane.columnIndex="1" GridPane.valignment="BOTTOM">
+                           <graphic>
+                              <ImageView fitHeight="12.0" fitWidth="12.0" pickOnBounds="true" preserveRatio="true">
+                                 <image>
+                                    <Image url="@images/icons/edit.png" />
+                                 </image>
+                              </ImageView>
+                           </graphic>
+                           <styleClass>
+                              <String fx:value="btn-image" />
+                              <String fx:value="btn-warning" />
+                           </styleClass>
+                        </Button>
+                        <Button fx:id="distanceButton" contentDisplay="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" mnemonicParsing="false" onAction="#create" stylesheets="@css/Buttons.css" textAlignment="CENTER" textFill="WHITE" GridPane.valignment="BOTTOM">
+                           <graphic>
+                              <ImageView fitHeight="12.0" fitWidth="12.0" pickOnBounds="true" preserveRatio="true">
+                                 <image>
+                                    <Image url="@images/icons/plus.png" />
+                                 </image>
+                              </ImageView>
+                           </graphic>
+                           <styleClass>
+                              <String fx:value="btn-image" />
+                              <String fx:value="btn-primary" />
+                           </styleClass>
+                        </Button>
+                        <Button fx:id="distanceButton" contentDisplay="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" mnemonicParsing="false" onAction="#delete" stylesheets="@css/Buttons.css" textAlignment="CENTER" textFill="WHITE" GridPane.columnIndex="2" GridPane.valignment="BOTTOM">
+                           <graphic>
+                              <ImageView fitHeight="12.0" fitWidth="12.0" pickOnBounds="true" preserveRatio="true">
+                                 <image>
+                                    <Image url="@images/icons/minus.png" />
+                                 </image>
+                              </ImageView>
+                           </graphic>
+                           <styleClass>
+                              <String fx:value="btn-danger" />
+                              <String fx:value="btn-image" />
+                           </styleClass>
+                        </Button>
+                        <TextField fx:id="searchDistanceTextField" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="26.0" prefWidth="108.0" promptText="поиск" stylesheets="@css/TextField.css" GridPane.columnIndex="3" GridPane.halignment="CENTER" GridPane.valignment="BOTTOM" />
                      </children>
-                     <GridPane.margin>
-                        <Insets left="5.0" />
-                     </GridPane.margin>
-                  </Pane>
+                     <padding>
+                        <Insets bottom="10.0" left="10.0" />
+                     </padding>
+                  </GridPane>
                   <Pane prefHeight="200.0" prefWidth="200.0">
                      <children>
                         <TableView fx:id="groupTable" prefHeight="274.0" style="-fx-border-radius: 12; -fx-background-color: #FAFAFA; -fx-effect: dropshadow(three-pass-box, rgba(0, 0, 0, 0.25), 6, 0, 0, 2);" stylesheets="@css/table.css">
