--- a/src/main/resources/view/css/table.css
+++ b/src/main/resources/view/css/table.css
@@ -29,7 +29,7 @@
     -fx-background-color: transparent;
 }
 
-.scroll-bar:horizontal .track,
+/*.scroll-bar:horizontal .track,
 .scroll-bar:vertical .track{
     -fx-background-color :transparent;
     -fx-border-color :transparent;
@@ -82,7 +82,7 @@
 .scroll-pane .corner{
     -fx-background-color :transparent;
     -fx-background-radius : 0.0em;
-}
+}*/
 
 .toggle-button {
     -fx-background-color :#FAFAFA;
@@ -127,11 +127,3 @@
     -fx-background-color:   #FF4040;
     -fx-effect: dropshadow(three-pass-box, rgba(0, 0, 0, 0.25), 6, 0, 0, 2);
 }*/
-.tab:top
-{
--fx-background-color: white;
-}
-.tab-pane *.tab-header-background
-{
--fx-background-color: #ECF1FE;
-}
