--- a/src/main/resources/view/RunPage.fxml
+++ b/src/main/resources/view/RunPage.fxml
@@ -45,7 +45,7 @@
                         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                      </rowConstraints>
                      <children>
-                        <Label prefHeight="18.0" prefWidth="94.0" text="Найти забег:" textFill="#555555" GridPane.halignment="LEFT" GridPane.valignment="CENTER">
+                        <Label prefHeight="18.0" prefWidth="94.0" text="Найти старт:" textFill="#555555" GridPane.halignment="LEFT" GridPane.valignment="CENTER">
                            <font>
                               <Font size="14.0" />
                            </font></Label>
@@ -55,38 +55,16 @@
                            </GridPane.margin></TextField>
                      </children>
                   </GridPane>
-                  <GridPane GridPane.columnIndex="1">
-                     <columnConstraints>
-                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="256.4000244140625" minWidth="10.0" prefWidth="230.40001220703124" />
-                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="408.39996337890625" minWidth="10.0" prefWidth="338.3999877929687" />
-                     </columnConstraints>
-                     <rowConstraints>
-                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                     </rowConstraints>
-                     <children>
-                        <TextField maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="26.0" prefWidth="322.0" style="-fx-background-color: #FAFAFA; -fx-effect: dropshadow(three-pass-box, rgba(0, 0, 0, 0.25), 6, 0, 0, 2);" GridPane.columnIndex="1" GridPane.halignment="RIGHT" />
-                        <Label prefHeight="26.0" prefWidth="126.0" text="Поиск участников:" textFill="#555555" GridPane.halignment="RIGHT">
-                           <font>
-                              <Font size="14.0" />
-                           </font>
-                        </Label>
-                     </children>
-                  </GridPane>
                </children>
             </GridPane>
             <TableView fx:id="runTable" prefHeight="419.0" prefWidth="1047.0" style="-fx-border-radius: 12; -fx-background-color: #FAFAFA; -fx-effect: dropshadow(three-pass-box, rgba(0, 0, 0, 0.25), 6, 0, 0, 2);" stylesheets="@css/table.css" GridPane.rowIndex="1">
                <columns>
-                  <TableColumn fx:id="lastnameColumn" prefWidth="75.0" text="Фамилия" />
-                  <TableColumn fx:id="nameColumn" prefWidth="75.0" text="Имя" />
-                  <TableColumn fx:id="middlenameColumn" prefWidth="75.0" text="Отчество" />
-                  <TableColumn fx:id="genderColumn" prefWidth="66.4000244140625" text="Пол" />
-                  <TableColumn fx:id="chipColumn" prefWidth="85.60003662109375" text="Чип" />
-                  <TableColumn fx:id="phoneNumberColumn" prefWidth="104.79995727539062" text="Номер" />
-                  <TableColumn fx:id="birthdateColumn" prefWidth="75.0" text="Дата рождения" />
-                  <TableColumn fx:id="regionColumn" prefWidth="75.0" text="Город" />
-                  <TableColumn fx:id="clubColumn" prefWidth="75.0" text="Клуб" />
-                  <TableColumn fx:id="rankColumn" prefWidth="75.0" text="Разряд" />
+                  <TableColumn fx:id="namestartColumn" prefWidth="75.0" text="Название" />
+                  <TableColumn fx:id="categoryColumn" prefWidth="75.0" text="Категория" />
                   <TableColumn fx:id="distanceColumn" prefWidth="75.0" text="Дистанция" />
+                  <TableColumn fx:id="starttimeColumn" prefWidth="66.4000244140625" text="Время старта" />
+                  <TableColumn fx:id="countlapsColumn" prefWidth="112.0" text="Кол-во кругов" />
+                  <TableColumn fx:id="compDayColumn" prefWidth="112.0" text="День соревнования" />
                </columns>
                <columnResizePolicy>
                   <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
@@ -112,10 +90,6 @@
                            </image>
                         </ImageView>
                      </graphic></Button>
-                  <Button mnemonicParsing="false" onAction="#AddExternalData" prefHeight="34.0" prefWidth="200.0" style="-fx-background-color: #394E75; -fx-background-radius: 8px; -fx-effect: dropshadow(three-pass-box, rgba(0, 0, 0, 0.25), 6, 0, 0, 2);" text="Загрузить из файла" textAlignment="CENTER" textFill="WHITE" GridPane.columnIndex="4">
-                     <font>
-                        <Font size="14.0" />
-                     </font></Button>
                   <Button contentDisplay="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" mnemonicParsing="false" onAction="#RemoveRows" prefHeight="34.0" prefWidth="34.0" style="-fx-background-radius: 12px; -fx-background-color: #FF4040; -fx-effect: dropshadow(three-pass-box, rgba(0, 0, 0, 0.25), 6, 0, 0, 2);" textAlignment="CENTER" textFill="WHITE" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
                      <graphic>
                         <ImageView fitHeight="19.34" fitWidth="16.39" pickOnBounds="true" preserveRatio="true">
@@ -134,30 +108,11 @@
                         </ImageView>
                      </graphic>
                   </Button>
-                  <Button fx:id="createCompretition_button" mnemonicParsing="false" onAction="#AddRun" prefHeight="34.0" prefWidth="200.0" style="-fx-background-color: #394E75; -fx-background-radius: 8px; -fx-effect: dropshadow(three-pass-box, rgba(0, 0, 0, 0.25), 6, 0, 0, 2);" text="Создать забег" textAlignment="CENTER" textFill="WHITE" GridPane.columnIndex="3">
+                  <Button fx:id="createCompretition_button" mnemonicParsing="false" onAction="#AddRun" prefHeight="34.0" prefWidth="200.0" style="-fx-background-color: #394E75; -fx-background-radius: 8px; -fx-effect: dropshadow(three-pass-box, rgba(0, 0, 0, 0.25), 6, 0, 0, 2);" text="Создать старт" textAlignment="CENTER" textFill="WHITE" GridPane.columnIndex="3">
                      <font>
                         <Font size="14.0" />
                      </font>
                   </Button>
-               </children>
-            </GridPane>
-            <GridPane alignment="TOP_CENTER" prefWidth="820.0" GridPane.rowIndex="3">
-               <columnConstraints>
-                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="519.199951171875" minWidth="10.0" prefWidth="497.6000061035156" />
-                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="553.6000061035156" minWidth="10.0" prefWidth="550.3999938964844" />
-               </columnConstraints>
-               <rowConstraints>
-                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-               </rowConstraints>
-               <children>
-                  <Button mnemonicParsing="false" prefHeight="40.0" prefWidth="500.0" style="-fx-background-color: #FFBB38; -fx-background-radius: 8px; -fx-effect: dropshadow(three-pass-box, rgba(0, 0, 0, 0.25), 6, 0, 0, 2);" text="Редактировать забег" GridPane.halignment="LEFT" GridPane.valignment="CENTER">
-                     <font>
-                        <Font size="14.0" />
-                     </font></Button>
-                  <Button mnemonicParsing="false" prefHeight="40.0" prefWidth="500.0" style="-fx-background-color: #00C781; -fx-background-radius: 8px; -fx-effect: dropshadow(three-pass-box, rgba(0, 0, 0, 0.25), 6, 0, 0, 2);" text="Присвоить чип" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.valignment="CENTER">
-                     <font>
-                        <Font size="14.0" />
-                     </font></Button>
                </children>
             </GridPane>
          </children>
