--- a/src/main/resources/view/RunPage.fxml
+++ b/src/main/resources/view/RunPage.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.String?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
@@ -38,18 +39,18 @@
                <children>
                   <GridPane prefHeight="34.0" prefWidth="493.0">
                      <columnConstraints>
-                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="256.4000244140625" minWidth="10.0" prefWidth="103.39998779296874" />
+                        <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" maxWidth="256.4000244140625" minWidth="10.0" prefWidth="103.39998779296874" />
                         <ColumnConstraints hgrow="SOMETIMES" maxWidth="418.80001068115234" minWidth="10.0" prefWidth="375.4000122070312" />
                      </columnConstraints>
                      <rowConstraints>
                         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                      </rowConstraints>
                      <children>
-                        <Label prefHeight="18.0" prefWidth="94.0" text="Найти старт:" textFill="#555555" GridPane.halignment="LEFT" GridPane.valignment="CENTER">
+                        <Label alignment="CENTER" prefHeight="18.0" prefWidth="94.0" text="Найти старт:" textFill="#555555" GridPane.halignment="RIGHT" GridPane.valignment="CENTER">
                            <font>
                               <Font size="14.0" />
                            </font></Label>
-                        <TextField maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="26.0" prefWidth="322.0" style="-fx-background-color: #FAFAFA; -fx-effect: dropshadow(three-pass-box, rgba(0, 0, 0, 0.25), 6, 0, 0, 2);" GridPane.columnIndex="1">
+                        <TextField maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="26.0" prefWidth="322.0" stylesheets="@css/TextField.css" GridPane.columnIndex="1">
                            <GridPane.margin>
                               <Insets right="30.0" />
                            </GridPane.margin></TextField>
@@ -57,24 +58,11 @@
                   </GridPane>
                </children>
             </GridPane>
-            <TableView fx:id="runTable" prefHeight="419.0" prefWidth="1047.0" style="-fx-border-radius: 12; -fx-background-color: #FAFAFA; -fx-effect: dropshadow(three-pass-box, rgba(0, 0, 0, 0.25), 6, 0, 0, 2);" stylesheets="@css/table.css" GridPane.rowIndex="1">
-               <columns>
-                  <TableColumn fx:id="namestartColumn" prefWidth="75.0" text="Название" />
-                  <TableColumn fx:id="categoryColumn" prefWidth="75.0" text="Категория" />
-                  <TableColumn fx:id="distanceColumn" prefWidth="75.0" text="Дистанция" />
-                  <TableColumn fx:id="starttimeColumn" prefWidth="66.4000244140625" text="Время старта" />
-                  <TableColumn fx:id="countlapsColumn" prefWidth="112.0" text="Кол-во кругов" />
-                  <TableColumn fx:id="compDayColumn" prefWidth="112.0" text="День соревнования" />
-               </columns>
-               <columnResizePolicy>
-                  <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
-               </columnResizePolicy>
-            </TableView>
             <GridPane GridPane.rowIndex="2">
                <columnConstraints>
-                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="256.3333435058594" minWidth="0.0" prefWidth="40.0" />
-                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="645.2" minWidth="0.0" prefWidth="53.600006103515625" />
-                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="818.6" minWidth="0.0" prefWidth="52.000019836425764" />
+                  <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" maxWidth="-Infinity" minWidth="-Infinity" prefWidth="34.0" />
+                  <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" maxWidth="-Infinity" minWidth="-Infinity" prefWidth="34.0" />
+                  <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" maxWidth="-Infinity" minWidth="-Infinity" prefWidth="34.0" />
                   <ColumnConstraints hgrow="SOMETIMES" maxWidth="818.6" minWidth="10.0" prefWidth="220.2000274658203" />
                   <ColumnConstraints hgrow="SOMETIMES" maxWidth="944.8" minWidth="10.0" prefWidth="689.7999725341797" />
                </columnConstraints>
@@ -82,39 +70,66 @@
                   <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                </rowConstraints>
                <children>
-                  <Button fx:id="addButton" contentDisplay="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" mnemonicParsing="false" onAction="#AddRow" prefHeight="34.0" prefWidth="34.0" style="-fx-background-radius: 12px; -fx-background-color: #3C76F1; -fx-effect: dropshadow(three-pass-box, rgba(0, 0, 0, 0.25), 6, 0, 0, 2);" textAlignment="CENTER" textFill="WHITE" GridPane.halignment="RIGHT" GridPane.valignment="CENTER">
+                  <Button fx:id="addButton" contentDisplay="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" mnemonicParsing="false" onAction="#AddRow" stylesheets="@css/Buttons.css" textAlignment="CENTER" textFill="WHITE" GridPane.halignment="RIGHT" GridPane.valignment="CENTER">
                      <graphic>
-                        <ImageView fitHeight="19.34" fitWidth="16.39" pickOnBounds="true" preserveRatio="true">
+                        <ImageView fitHeight="12.0" fitWidth="12.0" pickOnBounds="true" preserveRatio="true">
                            <image>
                               <Image url="@images/icons/plus.png" />
                            </image>
                         </ImageView>
-                     </graphic></Button>
-                  <Button contentDisplay="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" mnemonicParsing="false" onAction="#RemoveRows" prefHeight="34.0" prefWidth="34.0" style="-fx-background-radius: 12px; -fx-background-color: #FF4040; -fx-effect: dropshadow(three-pass-box, rgba(0, 0, 0, 0.25), 6, 0, 0, 2);" textAlignment="CENTER" textFill="WHITE" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
+                     </graphic>
+                     <styleClass>
+                        <String fx:value="btn-image" />
+                        <String fx:value="btn-primary" />
+                     </styleClass></Button>
+                  <Button contentDisplay="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" mnemonicParsing="false" onAction="#RemoveRows" stylesheets="@css/Buttons.css" textAlignment="CENTER" textFill="WHITE" GridPane.columnIndex="2" GridPane.halignment="LEFT" GridPane.valignment="CENTER">
                      <graphic>
-                        <ImageView fitHeight="19.34" fitWidth="16.39" pickOnBounds="true" preserveRatio="true">
+                        <ImageView fitHeight="12.0" fitWidth="12.0" pickOnBounds="true" preserveRatio="true">
                            <image>
                               <Image url="@images/icons/minus.png" />
                            </image>
                         </ImageView>
                      </graphic>
+                     <styleClass>
+                        <String fx:value="btn-image" />
+                        <String fx:value="btn-danger" />
+                     </styleClass>
                   </Button>
-                  <Button contentDisplay="CENTER" layoutX="79.0" layoutY="16.0" maxHeight="-Infinity" maxWidth="-Infinity" mnemonicParsing="false" onAction="#UpdateRow" prefHeight="34.0" prefWidth="34.0" style="-fx-background-radius: 12px; -fx-background-color: #FFBB38; -fx-effect: dropshadow(three-pass-box, rgba(0, 0, 0, 0.25), 6, 0, 0, 2);" textAlignment="CENTER" textFill="WHITE" GridPane.columnIndex="2" GridPane.halignment="LEFT" GridPane.valignment="CENTER">
+                  <Button alignment="CENTER" contentDisplay="CENTER" layoutX="79.0" layoutY="16.0" maxHeight="-Infinity" maxWidth="-Infinity" mnemonicParsing="false" onAction="#UpdateRow" stylesheets="@css/Buttons.css" textAlignment="CENTER" textFill="WHITE" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
                      <graphic>
-                        <ImageView fitHeight="19.34" fitWidth="16.39" pickOnBounds="true" preserveRatio="true">
+                        <ImageView fitHeight="12.0" fitWidth="12.0" pickOnBounds="true" preserveRatio="true">
                            <image>
                               <Image url="@images/icons/edit.png" />
                            </image>
                         </ImageView>
                      </graphic>
+                     <styleClass>
+                        <String fx:value="btn-image" />
+                        <String fx:value="btn-warning" />
+                     </styleClass>
                   </Button>
-                  <Button fx:id="createCompretition_button" mnemonicParsing="false" onAction="#AddRun" prefHeight="34.0" prefWidth="200.0" style="-fx-background-color: #394E75; -fx-background-radius: 8px; -fx-effect: dropshadow(three-pass-box, rgba(0, 0, 0, 0.25), 6, 0, 0, 2);" text="Создать старт" textAlignment="CENTER" textFill="WHITE" GridPane.columnIndex="3">
+                  <Button fx:id="createCompretition_button" mnemonicParsing="false" onAction="#AddRun" stylesheets="@css/Buttons.css" text="Создать старт" textAlignment="CENTER" textFill="WHITE" GridPane.columnIndex="3">
                      <font>
                         <Font size="14.0" />
                      </font>
+                     <styleClass>
+                        <String fx:value="btn" />
+                        <String fx:value="btn-small" />
+                        <String fx:value="btn-primary" />
+                     </styleClass>
                   </Button>
                </children>
             </GridPane>
+            <TableView fx:id="runTable" prefHeight="419.0" stylesheets="@css/table.css" GridPane.rowIndex="1">
+               <columns>
+                  <TableColumn fx:id="namestartColumn" prefWidth="175.0" text="Название" reorderable="false"/>
+                  <TableColumn fx:id="categoryColumn" prefWidth="170.0" text="Категория" reorderable="false"/>
+                  <TableColumn fx:id="distanceColumn" prefWidth="175.0" text="Дистанция" reorderable="false"/>
+                  <TableColumn fx:id="starttimeColumn" prefWidth="175.0" text="Время старта" reorderable="false"/>
+                  <TableColumn fx:id="countlapsColumn" prefWidth="175.0" text="Кол-во кругов" reorderable="false"/>
+                  <TableColumn fx:id="compDayColumn" prefWidth="175.0" text="День соревнования" reorderable="false"/>
+               </columns>
+            </TableView>
          </children>
          <padding>
             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
