--- a/src/main/resources/view/RunCreateRunPopup.fxml
+++ b/src/main/resources/view/RunCreateRunPopup.fxml
@@ -1,44 +1,58 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.String?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="388.0" prefWidth="576.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.lifehouse.raceth.gui.RunCreateRunController">
+<AnchorPane prefHeight="438.0" prefWidth="576.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.lifehouse.raceth.gui.RunCreateRunController">
    <children>
-      <Label layoutX="41.0" layoutY="-9.0" prefHeight="124.0" prefWidth="345.0" text="Создание забега" textFill="#305ec1">
+      <Label layoutX="41.0" layoutY="-9.0" prefHeight="124.0" prefWidth="402.0" styleClass="popup-header" stylesheets="@css/AppLabel.css" text="Создание (изменение) старта" textFill="#305ec1">
          <font>
             <Font name="System Bold" size="23.0" />
          </font>
       </Label>
-      <Label layoutX="41.0" layoutY="90.0" text="Дата забега">
+      <Label layoutX="39.0" layoutY="168.0" styleClass="label-regular" stylesheets="@css/AppLabel.css" text="Категория">
          <font>
             <Font size="16.0" />
          </font>
       </Label>
-      <Button fx:id="saveButt" layoutX="41.0" layoutY="317.0" mnemonicParsing="false" onAction="#Saving" prefHeight="37.0" prefWidth="131.0" stylesheets="@css/AgreeButton.css" text="Сохранить" />
-      <Button fx:id="cancelButt" layoutX="196.0" layoutY="317.0" mnemonicParsing="false" onAction="#Cancel" prefHeight="37.0" prefWidth="131.0" stylesheets="@css/DisagreeButton.css" text="Отменить" />
-      <Label layoutX="307.0" layoutY="90.0" text="Соревнование">
+      <Button fx:id="saveButt" layoutX="41.0" layoutY="363.0" mnemonicParsing="false" onAction="#Saving" prefHeight="37.0" prefWidth="131.0" styleClass="btn-success" stylesheets="@css/AgreeButton.css" text="Сохранить" />
+      <Button fx:id="cancelButt" layoutX="188.0" layoutY="363.0" mnemonicParsing="false" onAction="#Cancel" prefHeight="37.0" prefWidth="131.0" stylesheets="@css/DisagreeButton.css" text="Отменить" />
+      <Label layoutX="41.0" layoutY="230.0" styleClass="label-regular" stylesheets="@css/AppLabel.css" text="Дистанция">
          <font>
             <Font size="16.0" />
          </font>
       </Label>
-      <ComboBox fx:id="sorev" layoutX="307.0" layoutY="115.0" prefHeight="25.0" prefWidth="227.0" />
-      <Label layoutX="41.0" layoutY="152.0" text="Дистанция">
+      <Label layoutX="304.0" layoutY="106.0" styleClass="label-regular" stylesheets="@css/AppLabel.css" text="Время старта">
          <font>
             <Font size="16.0" />
          </font>
       </Label>
-      <ComboBox fx:id="distance" layoutX="41.0" layoutY="177.0" prefHeight="25.0" prefWidth="227.0" />
-      <Label layoutX="41.0" layoutY="222.0" text="Группа">
+      <ChoiceBox layoutX="41.0" layoutY="197.0" prefHeight="28.0" prefWidth="234.0" stylesheets="@css/ChoiseBox.css" />
+      <ChoiceBox layoutX="41.0" layoutY="258.0" prefHeight="28.0" prefWidth="234.0" stylesheets="@css/ChoiseBox.css" />
+      <Label layoutX="304.0" layoutY="168.0" styleClass="label-regular" stylesheets="@css/AppLabel.css" text="Круги">
          <font>
             <Font size="16.0" />
          </font>
       </Label>
-      <ComboBox fx:id="group" layoutX="41.0" layoutY="247.0" prefHeight="25.0" prefWidth="227.0" />
-      <DatePicker fx:id="date" layoutX="41.0" layoutY="115.0" prefHeight="25.0" prefWidth="227.0" />
+      <TextField layoutX="304.0" layoutY="134.0" prefHeight="25.0" prefWidth="219.0" promptText="11:30:00" stylesheets="@css/TextField.css" />
+      <TextField layoutX="304.0" layoutY="198.0" prefHeight="25.0" prefWidth="219.0" stylesheets="@css/TextField.css" />
+      <Label layoutX="41.0" layoutY="106.0" styleClass="label-regular" stylesheets="@css/AppLabel.css" text="Название">
+         <font>
+            <Font size="16.0" />
+         </font>
+      </Label>
+      <TextField layoutX="41.0" layoutY="134.0" prefHeight="25.0" prefWidth="219.0" stylesheets="@css/TextField.css" />
+      <DatePicker layoutX="304.0" layoutY="260.0" prefHeight="25.0" prefWidth="219.0" promptText="2022-02-19" stylesheets="@css/DatePicker.css">
+         <styleClass>
+            <String fx:value="left-arrow" />
+            <String fx:value="week-number-cell" />
+         </styleClass>
+      </DatePicker>
    </children>
 </AnchorPane>
